Fix footer issue with overlap

--- a/app/scss/global/_cssreset.scss
+++ b/app/scss/global/_cssreset.scss
@@ -17,9 +17,16 @@
     3. Add accessible line-height
     4. Improve text rendering
   */
+
 body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
+}
+html,
+body,
+#fullheight {
+  min-height: 100% !important;
+  height: 100%;
 }
 /*
     5. Improve media defaults
