--- a/app/scss/layout/_body.scss
+++ b/app/scss/layout/_body.scss
@@ -1,6 +1,5 @@
 body {
   position: relative;
-  height: 100%;
   font-family: var(--ff--primary);
   font-size: var(--fs--regular);
   background-color: var(--clr--white);
