--- a/app/scss/layout/_container.scss
+++ b/app/scss/layout/_container.scss
@@ -1,3 +1,4 @@
 .container {
   min-height: 100dvh;
+  height: 100%;
 }
