--- a/app/scss/layout/_content.scss
+++ b/app/scss/layout/_content.scss
@@ -250,6 +250,7 @@
   }
 
   .product {
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
